Fixed sizing of image in about section, fixed contact form reset as well as sending email. Fixed layout issues on mobile. Style changes for readability.

--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -1,5 +1,5 @@
 html {
-  font-size: 65%;
+  font-size: 70%;
 }
 
 body {
