--- a/src/style/sections/_about.scss
+++ b/src/style/sections/_about.scss
@@ -12,7 +12,7 @@
   clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
   padding-bottom: 10%;
   box-shadow: none !important;
-  padding-top: 1rem;
+  padding-top: 5rem;
 
   @include respond(tab-land) {
     height: 100%;
@@ -81,4 +81,9 @@
       }
     }
   }
+}
+
+.profile-image {
+  width: 25%;
+  height: 50%;
 }
